# shelter

./: app.py  pyproject.toml
static/: script.js  style.css
templates/: chat.html  index.html
