[tool.poetry]
name = "sim"
version = "0.1.0"
description = ""
authors = ["daeho <banana7907@naver.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
flask = "^3.1.0"
flask-socketio = "^5.4.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
